sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:11: error: Boolean does not take parameters
        echange(i,j)
               ^