sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i: Int = 0
  var j: Int = 0
  var echange = false
  do {
    for (compteur <- 1 to getNombreValeurs()-2) {
      i = getValeur(compteur)
      j = getValeur(compteur + 1)
      if (plusPetit(j,i)) {
        echange(i,j)
        echange = true
      }
    }
  }
  while (echange==true)
}